--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,60 @@
+/* ==========GLOBAL_STYLES========== */
 * {box-sizing: border-box;}
+html {
+  height: 100%;
+  scroll-behavior: smooth;
+}
 body {
-  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  font-size: 16px;
+  line-height: 22px;
+  background-color: #fff;
+  color: #4a4b4c;
   font-family: "Rubic", "Arial", sans-serif;
   padding: 0;
   margin: 0;
 }
-/* =========header======== */
-.site-header {
-
-  background-color:#F6F6F6;
-  text-align: center;
-  justify-content: center;
+img {
+  max-width: 100%;
+  height: auto;
 }
 .container {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1240px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
+.button {
+  display: inline-block;
+  padding: 12px 24px;
+  border-radius: 10px;
+  line-height: normal;
+  text-decoration: none;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  cursor: pointer;
+}
+* :focus {
+  outline: 2px dashed #7296ec;
+  outline-offset: 3px;
+}
+/* =========HEADER======== */
+.site-header {
+  background-color:#F6F6F6;
+  text-align: center;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+/* =======HEADER_TOP======= */
 .site-header-top {
   display: flex;
-  text-align: center;
+  align-items: center;
   justify-content: space-between;
 }
 .header-left {
@@ -43,6 +77,7 @@ body {
   justify-content: space-between;
   width: 158px;
   align-items: center;
+  margin-right: auto;
 }
 .currency-icon {
   color: #2959ce;
@@ -65,58 +100,51 @@ body {
   margin-right: 25px;
 }
 .languages {
-  width: 70px;
   display: flex;
-  border: 2px solid #dce6ff;
   border-radius: 39px ;
   background-color: #dce6ff;
   align-items: center;
-  padding-left: 0;
   margin-right: 25px;
-
+  padding: 3px;
 }
 .language {
-  display: inline-block;
-  font-size: 13px;
-  padding: 10px;
-}
-.language a {
-  font-family: "Rubik", "Arial" serif;
+  width: 30px;
+  height: 30px;
+  display: block;
+  text-decoration: none;
   font-weight: 400;
-  color: #000;
   font-size: 13px;
   line-height: 15.41px;
+  padding: 8px 7px;
+  border-radius: 50%;
   list-style: none;
   text-decoration: none;
-  opacity: 0.8;
+  color: #a6a6a6;
 }
-.language:active {
-background-color: #fff;
-border-radius: 50%;
-transition: 0.2s ease;
+.language-active {
+  background-color: #fff;
+  color: #000;
 }
-.header-button-link {
-  display: inline-block;
-  padding: 12px 24px;
+.header-button {
   color: #ffff;
-  background-color: #7296EC;;
-  border-radius: 10px;
+  background-color: #7296EC;
 }
-.header-button a {
-  text-decoration: none;
-}
-/* ===========header-bottom========= */
+/* ===========HEADER_BOTTOM========= */
 .bottom-nav-list {
   display: flex;
   text-decoration: none;
   list-style: none;
   align-items: center;
   padding-left: 0;
-  margin-right: -34.44px;
+  /* margin-right: -34.44px; */
   margin-top: 30px;
 }
 .bottom-nav-item {
-  margin-right: 34.44px;
+  display: block;
+  /* margin-right: 34.44px; */
+}
+.bottom-nav-item:not(:last-child) {
+  margin-right: 35px;
 }
 .bottom-nav-link {
   text-decoration: none;
@@ -129,9 +157,115 @@ transition: 0.2s ease;
 
 .header-line {
   width: 1200px;
+  margin-bottom: 40px;
 }
 .header-bottom-img {
   display: flex;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 50px;
+}
+/* ==========CARDS========= */
+.main-cards {
+  /* display: flex;
+  flex-wrap: wrap; */
+  width: 100%;
+  max-width: 1240px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-bottom: 60px;
+}
+.card {
+display: block;
+/* padding: 20px, 17px, 15px, 17px; */
+padding-top: 20px;
+padding-right: 17px;
+padding-bottom: 15px;
+padding-left: 17px;
+margin-left: 10px;
+width: 393px;
+background-color: #F6F6F6;
+border-radius: 15px;
+margin-bottom: 10px;
+}
+.card-heading {
+  font-family: "Rubik", "Arial", serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+}
+.card-text {
+  font-family: "Rubik", "Arial", serif;
+  font-size: 16px;
+  line-height: 22px;
+  color: #4a4b4c;
+  margin-bottom: 15px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 15px;
+}
+.card-img {
+  /* display: block; */
+  margin-bottom: 15px;
+  object-fit: fill;
+}
+.card-bottom-link {
+  display: flex;
+  text-decoration: none;
+  align-items: center;
+  /* margin-bottom: 15px; */
+}
+.card-bottom-img {
+  margin-right: 10px;
+}
+.card-bottom-text{
+  font-family: "Rubik", "Arial", serif;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #5e5f61;
+}
+/* =========NOTIFICATION-BAR========= */
+.notification-bar-container {
+width: 100%;
+max-width: 1050px;
+display: flex;
+align-items: center;
+border-radius: 10px;
+margin-left: auto;
+margin-right: auto;
+background-color: burlywood;
+margin-bottom: 60px;
+}
+.notification-bar-heading {
+  font-family: "Rubik" serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 26px;
+  color: #000;
+  margin-right: auto;
+  margin-left: 29px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.notification-bar-button {
+  display: inline-block;
+  height: 50px;
+  color: #fff;
+  background-color: #f78b3b;
+  font-family: "Rubik", "Arial", serif;
+  font-size: 20px;
+  margin-right: 71px;
 }
