--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   line-height: 22px;
   background-color: #fff;
   color: #4a4b4c;
-  font-family: "Rubic", "Arial", sans-serif;
+  font-family: "Rubik", "Arial", sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -136,15 +136,13 @@ img {
   list-style: none;
   align-items: center;
   padding-left: 0;
-  /* margin-right: -34.44px; */
   margin-top: 30px;
 }
 .bottom-nav-item {
   display: block;
-  /* margin-right: 34.44px; */
 }
 .bottom-nav-item:not(:last-child) {
-  margin-right: 35px;
+  margin-right: 34px;
 }
 .bottom-nav-link {
   text-decoration: none;
@@ -167,8 +165,6 @@ img {
 }
 /* ==========CARDS========= */
 .main-cards {
-  /* display: flex;
-  flex-wrap: wrap; */
   width: 100%;
   max-width: 1240px;
   padding-left: 20px;
@@ -184,7 +180,6 @@ img {
 }
 .card {
 display: block;
-/* padding: 20px, 17px, 15px, 17px; */
 padding-top: 20px;
 padding-right: 17px;
 padding-bottom: 15px;
@@ -217,7 +212,6 @@ margin-bottom: 10px;
   margin-bottom: 15px;
 }
 .card-img {
-  /* display: block; */
   margin-bottom: 15px;
   object-fit: fill;
 }
@@ -225,7 +219,6 @@ margin-bottom: 10px;
   display: flex;
   text-decoration: none;
   align-items: center;
-  /* margin-bottom: 15px; */
 }
 .card-bottom-img {
   margin-right: 10px;
