--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,8 @@ img {
   margin-bottom: 60px;
 }
 .card {
-display: block;
+display: flex;
+flex-direction: column;
 padding-top: 20px;
 padding-right: 17px;
 padding-bottom: 15px;
@@ -202,6 +203,7 @@ margin-bottom: 10px;
   margin-bottom: 10px;
 }
 .card-text {
+  flex-grow: 1;
   font-family: "Rubik", "Arial", serif;
   font-size: 16px;
   line-height: 22px;
@@ -213,6 +215,7 @@ margin-bottom: 10px;
 }
 .card-img {
   margin-bottom: 15px;
+  margin-top: auto;
   object-fit: fill;
 }
 .card-bottom-link {
@@ -261,4 +264,129 @@ margin-bottom: 60px;
   font-family: "Rubik", "Arial", serif;
   font-size: 20px;
   margin-right: 71px;
+}
+
+/* =========GLOBAL-NEWS======== */
+.global-news {
+  display: flex;
+}
+.global-news-heading {
+  font-weight: 500;
+  font-family: "Rubik", "Arial", serif;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000;
+  margin-bottom: 20px;
+}
+/* =========GLOBAL-NEWS-LEFT========== */
+.global-news-left {
+  display: flex;
+  flex-direction: column;
+  margin-right: 10px;
+}
+.section-left {
+  display: flex;
+  width: 797px;
+  background-color: #f6f6f6;
+  border-radius: 15px;
+  margin-bottom: 10px;
+  padding-right: 20px;
+}
+.section-left-img {
+  display: block;
+  border-radius: 10px;
+  width: 210px;
+  height: 165px;
+  margin-top: 20px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+  margin-left: 17px;
+}
+.section-left-heading {
+font-family: "Rubik", "Arial", serif;
+font-weight: 500;
+font-size: 20px;
+line-height: 26px;
+font-style: normal;
+color: #000;
+margin-bottom: 10px;
+}
+.section-left-text {
+  font-family: "Rubik", "Arial", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 22px;
+  color: #4a4b4c;
+  margin-bottom: 17px;
+}
+.section-left-footer {
+  display: flex;
+  align-items: center;
+}
+.left-footer-img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.show-more {
+  background-color: #eaeaea;
+  border-radius: 10px;
+  margin-top: 17px;
+}
+.show-more-link {
+  display: block;
+  font-family: "Rubik", "Arial", serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration: none;
+  color: #000;
+  padding: 17px 343px;
+
+}
+
+/* =========GLOBAL-NEWS-RIGHT======= */
+.global-news-right {
+  display: flex;
+  flex-direction: column;
+  font-family: "Rubik", "Arial", serif;
+}
+.global-news-right-container {
+  border-radius: 8px;
+  font-style: normal;
+  background-color: #f6f6f6;
+  color: #000;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 10px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 25px;
+  padding-left: 17px;
+}
+.section-right-heading {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28.44px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-family: "Rubik", serif;
+}
+.section-right-link-title{
+  margin-bottom: 8px;
+}
+.section-right-link {
+  text-decoration: none;
+  color: #000;
+  font-size: 18px;
+  line-height: 24px;
+
+}
+.right-link-source-time{
+font-size: 13px;
+line-height: 15px;
+color: #5e5f61;
+padding-bottom: 19px;
+border-bottom: 1px solid #d2d2d2;
 }
