--- a/css/styles.css
+++ b/css/styles.css
@@ -302,6 +302,7 @@ margin-bottom: 60px;
   margin-right: 15px;
   margin-bottom: 20px;
   margin-left: 17px;
+  object-fit: contain;
 }
 .section-left-heading {
 font-family: "Rubik", "Arial", serif;
@@ -329,6 +330,7 @@ margin-bottom: 10px;
   width: 20px;
   height: 20px;
   margin-right: 10px;
+  border-radius: 5px;
 }
 .show-more {
   background-color: #eaeaea;
@@ -393,6 +395,10 @@ line-height: 15px;
 color: #5e5f61;
 padding-bottom: 19px;
 }
+.list-section-right-img {
+width: 393px;
+height: 553px;
+}
 
 
 /* =========FOOTER======= */
@@ -409,8 +415,17 @@ padding-bottom: 19px;
 }
 
 /* ========FOOTER-TOP====== */
+.site-footer-logo-wrapper {
+  display: flex;
+}
 .footer-logo {
-  display: block;
+  display:flex;
+  object-fit: contain;
+}
+.footer-img {
+  width: 264px;
+  height: 28px;
+  object-fit: contain;
 }
 .footer-top-contents-wrapper {
   display: flex;
@@ -474,7 +489,13 @@ padding-bottom: 19px;
 }
 .footer-socials-item {
   list-style-type: none;
+  transition: 0.5s ease;
 }
+.footer-socials-item:hover {
+  transform: scale(1.5);
+
+}
+
 .footer-socials-item:not(:last-child) {
 margin-right: 25px;
 }
