--- a/css/styles.css
+++ b/css/styles.css
@@ -499,3 +499,98 @@ height: 553px;
 .footer-socials-item:not(:last-child) {
 margin-right: 25px;
 }
+
+/* =========ARTICLE========== */
+.article-global-news-left{
+  width: 797px;
+  margin-right: 10px;
+  }
+
+.article-news-left-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.article-left-header-source-time {
+  display: flex;
+  align-items: center;
+}
+.article-left-header-img {
+  display: inline-block;
+  margin-right: 4px;
+}
+.article-section-left-text {
+  font-family: "Rubik", "Arial", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #000;
+}
+.article-section-left-text {
+  padding-bottom: 49px;
+  border-bottom: 1px solid #d2d2d2;
+}
+
+/* =======ARTICLE-CTA======= */
+.article-cta {
+  display: flex;
+  flex-direction: column;
+}
+.cta-header {
+
+  font-size: 24px;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 28px;
+  color: #000;
+  padding: 0;
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+.article-cta-cards {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+  font-family: "Rubik", "Arial", serif;
+}
+.article-cta-card {
+  width: 393px;
+  flex-grow: 1;
+  padding: 20px;
+}
+.article-cta-card:not(:last-child) {
+  margin-right: 10px;
+}
+.article-card-cta-heading {
+  display: inline;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  color: #000;
+}
+.article-card-text {
+font-weight: 400;
+font-style: normal;
+font-size: 16px;
+line-height: 22px;
+color: #4a4b4c;
+}
+.article-cta-card-footer {
+  display: flex;
+}
+.cta-card-footer-img {
+  width: 20px;
+  height: 20px;
+}
+.article-cta-source-time {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #5e5f61;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+}
