--- a/css/styles.css
+++ b/css/styles.css
@@ -357,6 +357,7 @@ margin-bottom: 10px;
   font-family: "Rubik", "Arial", serif;
 }
 .global-news-right-container {
+  width: 393px;
   border-radius: 8px;
   font-style: normal;
   background-color: #f6f6f6;
@@ -395,10 +396,10 @@ line-height: 15px;
 color: #5e5f61;
 padding-bottom: 19px;
 }
-.list-section-right-img {
+/* .list-section-right-img {
 width: 393px;
 height: 553px;
-}
+} */
 
 
 /* =========FOOTER======= */
@@ -527,7 +528,7 @@ margin-right: 25px;
   line-height: 30px;
   color: #000;
 }
-.article-section-left-text {
+.article-section-left-text:last-child {
   padding-bottom: 49px;
   border-bottom: 1px solid #d2d2d2;
 }
@@ -546,18 +547,21 @@ margin-right: 25px;
   color: #000;
   padding: 0;
   margin-top: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .article-cta-cards {
   display: flex;
   list-style: none;
   padding-left: 0;
   font-family: "Rubik", "Arial", serif;
+
 }
 .article-cta-card {
   width: 393px;
   flex-grow: 1;
   padding: 20px;
+  background-color: #f6f6f6;
+  border-radius: 15px;
 }
 .article-cta-card:not(:last-child) {
   margin-right: 10px;
