--- a/css/styles.css
+++ b/css/styles.css
@@ -587,6 +587,8 @@ color: #4a4b4c;
 .cta-card-footer-img {
   width: 20px;
   height: 20px;
+  margin-top: auto;
+  object-fit: fill;
 }
 .article-cta-source-time {
   font-style: normal;
